--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -88,11 +88,11 @@ $ fhatos --boot:config=../conf/boot-loader.obj
       .oO loading system objs Oo.
 [INFO]  [/sys/scheduler] scheduler started
 [INFO]  [/sys/router] router started
-[INFO]  [/sys/router] main memory [total=>5632]
+[INFO]  [/sys/router] main memory [total=>5760]
 [INFO]  [/sys/router] heap <none> spanning /sys/# mounted
 [INFO]  [/sys/router] heap <none> spanning /mnt/# mounted
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# mounted
-[INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 814 bytes)
+[INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 813 bytes)
 [INFO]  [/sys/router] 
   [
     router=>[resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]]
@@ -100,7 +100,7 @@ $ fhatos --boot:config=../conf/boot-loader.obj
     mqtt=>[broker=>mqtt://chibi.local:1883,client=>fhatos_client,async=>true,cache_size=>50]
     wifi=>[ssid=>Rodkins-2G,password=>'puppymama',mdns=>fhatos]
     ota=>[host=>mdns://fhatos_client:3232]
-    console=>[terminal=>[stdout=>/io/terminal/:stdout,stdin=>/io/terminal/:stdin],nest=>2,ellipsis=>125,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]
+    console=>[terminal=>[stdout=>/io/terminal/:stdout,stdin=>/io/terminal/:stdin],nest=>2,ellipsis=>50,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]
     fs=>[root=>./data/fs]
   ]@/boot/config
 [INFO]  [/sys/router] router boot config dropped
@@ -185,7 +185,12 @@ fhatos> */sys/scheduler
 ==>config=>[
 ===>def_stack_size=>8096
 =>]
-==>thread=>[...
+==>thread=>[
+=>]
+==>::=>[
+===>spawn=>spawn?obj<=obj{?}(_)[cpp]
+=>]
+>]@/sys/scheduler
 ----
 
 ++++
@@ -211,7 +216,54 @@ fhatos> */sys/router
 >[
 ==>frame=>[rec][_]
 ==>config=>[
-===>resolve=>!...
+===>resolve=>[
+====>namespace=>[
+=====>:=>/mmadt/
+=====>fos:=>/fos/
+===>]
+====>auto_prefix=>[
+=====>
+=====>/mmadt/
+=====>/mmadt/ext/
+=====>/fos/
+=====>/fos/sys/
+=====>/fos/io/
+=====>/fos/sensor/
+=====>/fos/ui/
+=====>/fos/util/
+=====>/sys/
+===>]
+====>query=>[
+=====>write=>[
+======>lock=>to_do
+====>]
+===>]
+====>default_config=>[
+=====>query=>[
+======>write=>[sub=>noobj]
+====>]
+===>]
+==>]
+=>]
+==>query=>[
+===>write=>[
+====>lock=>lock?obj{?}<=obj{?}()[cpp]
+====>sub=>sub?obj{?}<=obj()[cpp]
+==>]
+=>]
+==>structure=>[
+===>/sys/#
+===>/mnt/#
+===>/boot/#
+===>/fos/#
+===>/mmadt/#
+===>/io/#
+===>+/#
+===>/disk/#
+===>/shared/#
+===>/bus/#
+=>]
+>]@/sys/router
 ----
 
 ++++
@@ -232,7 +284,166 @@ The [.h]#mmADT# language is embedded in the fURI address space thus enabling htt
 fhatos> */mmadt/#/
 >[
 ==>/mmadt/as=>as(type?uri=>_)[cpp]
-==>/mmadt/at=>!...
+==>/mmadt/at=>at?obj{?}<=obj{?}(isa(/mmadt/uri))[cpp]
+==>/mmadt/barrier=>barrier?objs{*}<=objs{*}(_)[cpp]
+==>/mmadt/bcode=>[bcode][_]
+==>/mmadt/bcode/::/mmadt/inspect=>inspect(_)[cpp]
+==>/mmadt/block=>block?obj<=obj{?}(_)[cpp]
+==>/mmadt/bool=>[bool][_]
+==>/mmadt/bool/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
+==>/mmadt/bool/::/mmadt/div=>div(isa(/mmadt/bool))[cpp]
+==>/mmadt/bool/::/mmadt/inspect=>inspect(_)[cpp]
+==>/mmadt/bool/::/mmadt/minus=>minus(isa(/mmadt/bool))[cpp]
+==>/mmadt/bool/::/mmadt/mult=>mult(isa(/mmadt/bool))[cpp]
+==>/mmadt/bool/::/mmadt/neg=>neg(isa(/mmadt/bool))[cpp]
+==>/mmadt/bool/::/mmadt/plus=>plus(isa(/mmadt/bool))[cpp]
+==>/mmadt/chain=>chain(_)[cpp]
+==>/mmadt/choose=>choose(_)[cpp]
+==>/mmadt/count=>count?int<=objs{*}()[cpp]
+==>/mmadt/div=>div(_)
+==>/mmadt/drop=>drop?obj{?}<=obj{?}(isa(/mmadt/obj))[cpp]
+==>/mmadt/each=>each(isa(/mmadt/obj))
+==>/mmadt/else=>else?obj<=obj{?}(_)[cpp]
+==>/mmadt/embed=>embed()[cpp]
+==>/mmadt/end=>end?noobj{.}<=obj{*}()[cpp]
+==>/mmadt/eq=>eq(_)[cpp]
+==>/mmadt/error=>[error][_]
+==>/mmadt/explain=>explain()[cpp]
+==>/mmadt/ext/C=>C()[is(gte(-273.14999))]
+==>/mmadt/ext/Ox=>Ox()[is(true)]
+==>/mmadt/ext/char=>char()[merge(2).count().is(eq(1))]
+==>/mmadt/ext/int16=>[int16][_]
+==>/mmadt/ext/int32=>[int32][_]
+==>/mmadt/ext/int8=>uint8()[is(gte(-127)).is(lte(128))]
+==>/mmadt/ext/ms=>[real][_]
+==>/mmadt/ext/ms/::/mmadt/as=>as(is(eq(/mmadt/ext/sec)))[cpp]
+==>/mmadt/ext/nat=>nat()[is(gte(0))]
+==>/mmadt/ext/prnt=>prnt()[is(gte(0.00000)).is(lte(100.00000))]
+==>/mmadt/ext/sec=>[real][_]
+==>/mmadt/ext/secret=>[str][_]
+==>/mmadt/ext/secret/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/ext/uint8=>uint8()[is(gte(0)).is(lte(255))]
+==>/mmadt/flip=>flip(_)[cpp]
+==>/mmadt/frame=>frame?rec<=obj{?}()[cpp]
+==>/mmadt/from=>from?obj{?}<=obj{?}(_,else(noobj))[cpp]
+==>/mmadt/gt=>gt()
+==>/mmadt/gte=>gte()
+==>/mmadt/inspect=>inspect(_)
+==>/mmadt/inst=>[inst][_]
+==>/mmadt/inst/::/mmadt/inspect=>inspect(_)[cpp]
+==>/mmadt/inst/blockers=>[
+===>block
+===>each
+===>within
+===>isa
+===>split
+===>choose
+===>chain
+=>]
+==>/mmadt/int=>[int][_]
+==>/mmadt/int/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
+==>/mmadt/int/::/mmadt/div=>div(0?int=>isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/gt=>gt(_)[cpp]
+==>/mmadt/int/::/mmadt/gte=>gte(_)[cpp]
+==>/mmadt/int/::/mmadt/inspect=>inspect(_)[cpp]
+==>/mmadt/int/::/mmadt/lt=>lt(_)[cpp]
+==>/mmadt/int/::/mmadt/lte=>lte(_)[cpp]
+==>/mmadt/int/::/mmadt/minus=>minus(0?int=>isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/mod=>mod(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/mult=>mult(0?int=>isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/neg=>neg(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/plus=>plus(0?int=>isa(/mmadt/int))[cpp]
+==>/mmadt/is=>is?obj{?}<=obj(_)[cpp]
+==>/mmadt/isa=>isa?obj{?}<=obj{?}(_)[cpp]
+==>/mmadt/lift=>lift(_)[cpp]
+==>/mmadt/lock=>lock(user=>_)[cpp]
+==>/mmadt/lshift=>lshift()
+==>/mmadt/lst=>[lst][_]
+==>/mmadt/lst/::/mmadt/div=>div(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/each=>each(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/inspect=>inspect(_)[cpp]
+==>/mmadt/lst/::/mmadt/merge=>merge?objs{*}<=lst()[cpp]
+==>/mmadt/lst/::/mmadt/minus=>minus(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/mult=>mult(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/plus=>plus(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/split=>split(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/within=>within(_)[cpp]
+==>/mmadt/lt=>lt()
+==>/mmadt/lte=>lte()
+==>/mmadt/map=>map?obj{?}<=obj{?}(_)[cpp]
+==>/mmadt/merge=>merge?obj{?}<=obj()[cpp]
+==>/mmadt/minus=>minus(_)
+==>/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])
+==>/mmadt/mult=>mult(_)
+==>/mmadt/neg=>neg(isa(/mmadt/obj))
+==>/mmadt/neq=>neq(_)[cpp]
+==>/mmadt/noobj=>[noobj][_]
+==>/mmadt/not=>not?obj{?}<=obj(_)[cpp]
+==>/mmadt/obj=>[obj][_]
+==>/mmadt/objs=>[objs][_]
+==>/mmadt/plus=>plus(_)
+==>/mmadt/print=>print?obj{?}<=obj{?}(_)[cpp]
+==>/mmadt/prod=>prod?obj<=objs{*}()[cpp]
+==>/mmadt/real=>[real][_]
+==>/mmadt/real/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
+==>/mmadt/real/::/mmadt/div=>div(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/gt=>gt(_)[cpp]
+==>/mmadt/real/::/mmadt/gte=>gte(_)[cpp]
+==>/mmadt/real/::/mmadt/inspect=>inspect(_)[cpp]
+==>/mmadt/real/::/mmadt/lt=>lt(_)[cpp]
+==>/mmadt/real/::/mmadt/lte=>lte(_)[cpp]
+==>/mmadt/real/::/mmadt/minus=>minus(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/mult=>mult(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/neg=>neg(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/plus=>plus(isa(/mmadt/real))[cpp]
+==>/mmadt/rec=>[rec][_]
+==>/mmadt/rec/::/mmadt/div=>div(isa(/mmadt/rec))[cpp]
+==>/mmadt/rec/::/mmadt/each=>each(isa(/mmadt/rec))[cpp]
+==>/mmadt/rec/::/mmadt/inspect=>inspect(_)[cpp]
+==>/mmadt/rec/::/mmadt/lshift=>lshift(isa(/mmadt/int))[cpp]
+==>/mmadt/rec/::/mmadt/merge=>merge?objs{*}<=rec()[cpp]
+==>/mmadt/rec/::/mmadt/minus=>minus(isa(/mmadt/rec))[cpp]
+==>/mmadt/rec/::/mmadt/mult=>mult(isa(/mmadt/rec))[cpp]
+==>/mmadt/rec/::/mmadt/plus=>plus(isa(/mmadt/rec))[cpp]
+==>/mmadt/rec/::/mmadt/rshift=>rshift(isa(/mmadt/uri))[cpp]
+==>/mmadt/rec/::/mmadt/within=>within(_)[cpp]
+==>/mmadt/ref=>ref?obj{?}<=obj{?}(_,block(noobj))[cpp]
+==>/mmadt/repeat=>repeat(from(0?code,noobj)[cpp],from(1?until,true)[cpp],from(2?emit,false)[cpp])[cpp]
+==>/mmadt/rshift=>rshift()
+==>/mmadt/split=>split(_)[cpp]
+==>/mmadt/start=>start?objs{*}<=noobj{.}(_)[cpp]
+==>/mmadt/str=>[str][_]
+==>/mmadt/str/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
+==>/mmadt/str/::/mmadt/div=>div(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/gt=>gt(_)[cpp]
+==>/mmadt/str/::/mmadt/gte=>gte(_)[cpp]
+==>/mmadt/str/::/mmadt/inspect=>inspect(_)[cpp]
+==>/mmadt/str/::/mmadt/lt=>lt(_)[cpp]
+==>/mmadt/str/::/mmadt/lte=>lte(_)[cpp]
+==>/mmadt/str/::/mmadt/merge=>merge?objs{*}<=str()[cpp]
+==>/mmadt/str/::/mmadt/minus=>minus(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/mult=>mult(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/plus=>plus(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/within=>within(_)[cpp]
+==>/mmadt/sum=>sum?obj<=objs{*}()[cpp]
+==>/mmadt/to=>to(_,true)[cpp]
+==>/mmadt/type=>type?uri<=obj{?}(_)[cpp]
+==>/mmadt/uri=>[uri][_]
+==>/mmadt/uri/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/div=>div(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/gt=>gt(_)[cpp]
+==>/mmadt/uri/::/mmadt/gte=>gte(_)[cpp]
+==>/mmadt/uri/::/mmadt/inspect=>inspect(_)[cpp]
+==>/mmadt/uri/::/mmadt/lshift=>lshift(_)[cpp]
+==>/mmadt/uri/::/mmadt/lt=>lt(_)[cpp]
+==>/mmadt/uri/::/mmadt/lte=>lte(_)[cpp]
+==>/mmadt/uri/::/mmadt/merge=>merge?objs{*}<=uri()[cpp]
+==>/mmadt/uri/::/mmadt/minus=>minus(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/mult=>mult(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/plus=>plus(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/rshift=>rshift(_)[cpp]
+==>/mmadt/within=>within(_)
+>]
 ----
 
 ++++
@@ -273,7 +484,8 @@ An `inst` written in mmADT.
 [source,mmadt]
 ----
 fhatos> *nat
-==>nat?int<=int()[is(gte(0))]
+==>nat?int<=int()[
+	is(gte(0))]
 ----
 
 ++++
@@ -608,7 +820,20 @@ The mechanics of `obj` typing are exemplified below using the generally useful t
 fhatos> */mmadt/ext/#/
 >[
 ==>/mmadt/ext/C=>C()[is(gte(-273.14999))]
-==>/...
+==>/mmadt/ext/Ox=>Ox()[is(true)]
+==>/mmadt/ext/char=>char()[merge(2).count().is(eq(1))]
+==>/mmadt/ext/int16=>[int16][_]
+==>/mmadt/ext/int32=>[int32][_]
+==>/mmadt/ext/int8=>uint8()[is(gte(-127)).is(lte(128))]
+==>/mmadt/ext/ms=>[real][_]
+==>/mmadt/ext/ms/::/mmadt/as=>as(is(eq(/mmadt/ext/sec)))[cpp]
+==>/mmadt/ext/nat=>nat()[is(gte(0))]
+==>/mmadt/ext/prnt=>prnt()[is(gte(0.00000)).is(lte(100.00000))]
+==>/mmadt/ext/sec=>[real][_]
+==>/mmadt/ext/secret=>[str][_]
+==>/mmadt/ext/secret/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/ext/uint8=>uint8()[is(gte(0)).is(lte(255))]
+>]
 ----
 
 ++++
@@ -635,14 +860,15 @@ char['b']@b
 [source,mmadt]
 ----
 fhatos> *char
-==>char?int<=str()[merge(2).count().is(eq(1))...
+==>char?int<=str()[
+	merge(2).count().is(eq(1))]
 fhatos> char['a']@a
 ==>char['a']@a
 fhatos> char['b']@b
 ==>char['b']@b
 fhatos> @a + @b
 [ERROR] [/sys/scheduler] [/mmadt/noobj] noobj accessed as str
-	  thrown at inst char['a']@a => plus()[cpp] [code=>'@a + @b']
+	  thrown at inst char['a']@a => plus()[cpp] [0=>'@a + @b',code=>'@a + @b']
 fhatos> *a
 ==>char['a']@a
 fhatos> @a.as(str) + @b
@@ -673,7 +899,8 @@ nat[12]@a
 [source,mmadt]
 ----
 fhatos> *nat
-==>nat?int<=int()[is(gte(0))]
+==>nat?int<=int()[
+	is(gte(0))]
 fhatos> nat[12]
 ==>nat[12]
 fhatos> nat[-30]
@@ -684,7 +911,7 @@ fhatos> @a.minus(11)
 ==>nat[1]@a
 fhatos> @a.minus(2)
 [ERROR] [/sys/scheduler] [/sys/lang/parser] -1@a is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
-	  thrown at inst nat[1]@a => minus(0?int=>2)[cpp] [0=>2]
+	  thrown at inst nat[1]@a => minus(0?int=>2)[cpp] [0=>'@a.minus(2)',0?int=>2]
 fhatos> *a
 ==>nat[1]@a
 ----
@@ -709,7 +936,8 @@ C[-274.0]
 [source,mmadt]
 ----
 fhatos> *C
-==>C?real<=real()[is(gte(-273.14999))]
+==>C?real<=real()[
+	is(gte(-273.14999))]
 fhatos> C[0.0]
 ==>C[0.000000]
 fhatos> C[274.0]
@@ -775,10 +1003,16 @@ band -> ||band?int{?}<=int(_,_)[is(gte(*<0>)).is(lte(*<1>))]
 [source,mmadt]
 ----
 fhatos> band -> ||band?int{?}<=int(_,_)[is(gte(*<0>)).is(lte(*<1>))]
-==>band?int{?}<=int(_,_)[band?int{?}<=int[is(gte!...
+==>band?int{?}<=int(_,_)[
+	band?int{?}<=int[is(gte(from(0))).is(lte(from(1)))]]
 fhatos> 3.band(2,8)                           // <1>
-==>3
+[ERROR] [/sys/scheduler] [/mmadt/bcode] from(0) accessed as int
+	  thrown at inst 3 => gte(from(0)) [0=>'3.band(2,8)                           // <1>',1=>8]
+	  thrown at inst 3 => band?int{?}<=int(2,8)[band?int{?}<=int[is(gte(from(0))).is(lte(from(1)))]] [0=>'3.band(2,8)                           // <1>',1=>8]
 fhatos> 10.band(2,8)                          // <3>
+[ERROR] [/sys/scheduler] [/mmadt/bcode] from(0) accessed as int
+	  thrown at inst 10 => gte(from(0)) [0=>'10.band(2,8)                          // <3>',1=>8]
+	  thrown at inst 10 => band?int{?}<=int(2,8)[band?int{?}<=int[is(gte(from(0))).is(lte(from(1)))]] [0=>'10.band(2,8)                          // <3>',1=>8]
 ----
 
 ++++
@@ -814,7 +1048,8 @@ band -> ||band?int{?}<=int(min=>_,max=>_)[is(gte(*min)).is(lte(*max))]
 [source,mmadt]
 ----
 fhatos> band -> ||band?int{?}<=int(min=>_,max=>_)[is(gte(*min)).is(lte(*max))]
-==>band?int{?}<=int(min=>_,max=>_)[band?int{?}<...
+==>band?int{?}<=int(min=>_,max=>_)[
+	band?int{?}<=int[is(gte(from(min))).is(lte(from(max)))]]
 fhatos> 3.band(2,8)                           // <1>
 ==>3
 fhatos> 3.band(max=>8,min=>2)                 // <2>
@@ -823,8 +1058,8 @@ fhatos> 10.band(2,max=>8)                     // <3>
 ==>band
 fhatos> 'abc'.band(2,8)                       // <4>
 [ERROR] [/sys/scheduler] [/mmadt/int] 2 accessed as str
-	  thrown at inst 'abc' => gte(from(min)) [min=>2,max=>8,0=>2]
-	  thrown at inst 'abc' => band?int{?}<=int(min=>2,max=>8)[band?int{?}<=int[is(gte(from(min))).is(lte(from(max)))]] [min=>2,max=>8]
+	  thrown at inst 'abc' => gte(from(min)) [0=>'\'abc\'.band(2,8)                       // <4>',1=>8,min=>2,max=>8]
+	  thrown at inst 'abc' => band?int{?}<=int(2,8,min=>2,max=>8)[band?int{?}<=int[is(gte(from(min))).is(lte(from(max)))]] [0=>'\'abc\'.band(2,8)                       // <4>',1=>8,min=>2,max=>8]
 ----
 
 ++++
@@ -862,7 +1097,8 @@ band -> ||band?int{?}<=int(min=>else(2),max=>else(8))[is(gte(*min)).is(lte(*max)
 [source,mmadt]
 ----
 fhatos> band -> ||band?int{?}<=int(min=>else(2),max=>else(8))[is(gte(*min)).is(lte(*max))]
-==>band?int{?}<=int(min=>else?noobj<=obj(2)[noobj],...
+==>band?int{?}<=int(min=>else?noobj<=obj(2)[noobj],max=>else?noobj<=obj(8)[noobj])[
+	band?int{?}<=int[is(gte(from(min))).is(lte(from(max)))]]
 fhatos> 1.band(min=>1)                        // <1>
 ==>1
 fhatos> 10.band()                             // <2>
@@ -871,7 +1107,7 @@ fhatos> {2,3,4,5}.band(min=>3,max=>4)         // <3>
 [ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/lte?dom=/mmadt/obj&dc=1,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
 	         lhs id      inst id       resolve obj      
 	  ->[/mmadt/obj] /mmadt/lte => lte()
-	  thrown at inst 2 => band?int{?}<=int(min=>3,max=>4)[band?int{?}<=int[is(gte(from(min))).is(lte(from(max)))]] [min=>3,max=>4]
+	  thrown at inst 2 => band?int{?}<=int(min=>3,max=>4)[band?int{?}<=int[is(gte(from(min))).is(lte(from(max)))]] [0=>'{2,3,4,5}.band(min=>3,max=>4)         // <3>',min=>3,max=>4]
 ----
 
 ++++
@@ -906,7 +1142,8 @@ is_divisible -> ||is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
 [source,mmadt]
 ----
 fhatos> is_divisible -> ||is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
-==>is_divisble?bool<=int(by?int=>_)[is_divisble[mod(from(by...
+==>is_divisble?bool<=int(by?int=>_)[
+	is_divisble[mod(from(by)).eq(0)]]
 fhatos> 10.is_divisible(2)
 ==>true
 fhatos> 10.is_divisible('abc')
@@ -920,7 +1157,7 @@ fhatos> 10.is_divisible('abc')
 
 --
 
-dynamic args::
+contextual args::
 +
 --
 
@@ -935,7 +1172,8 @@ is_divisible -> ||is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
 [source,mmadt]
 ----
 fhatos> is_divisible -> ||is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
-==>is_divisble?bool<=int(by?int=>_)[is_divisble[mod(from(by...
+==>is_divisble?bool<=int(by?int=>_)[
+	is_divisble[mod(from(by)).eq(0)]]
 fhatos> 10.is_divisible(2)
 ==>true
 fhatos> 10.is_divisible('abc')
@@ -946,6 +1184,41 @@ fhatos> 10.is_divisible('abc')
 ++++
 <!-- 🐓 -->
 ++++
+
+--
+
+dependent args::
++
+--
+
+[stem]
+++++
+\tt{obj}_\tt{in}.f(a_1 \Rightarrow x,a_2 \Rightarrow \color{yellow}{g(*a_1)},\ldots,a_n) \mapsto \tt{obj}_\tt{out}
+++++
+
+If an argument's type is dependent on the value of another argument, then the argument is a https://en.m.wikipedia.org/wiki/Dependent_type[dependent argument].
+
+++++
+<!-- 🐖 ./main_runner.out
+band -> ||band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[is(gte(*min)).is(lte(*max))]
+2.band(min=>1,max=>1)                 --- <1>
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> band -> ||band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[is(gte(*min)).is(lte(*max))]
+==>band?int{?}<=int(min=>_,max=>is?noobj<=obj(gt?noobj<=obj(from?noobj<=obj(min)[noobj])[noobj])[noobj].else?noobj<=obj(from?noobj<=obj(min)[noobj].plus?noobj<=obj(1)[noobj])[n...
+	band?int{?}<=int[is(gte(from(min))).is(lte(from(max)))]]
+fhatos> 2.band(min=>1,max=>1)                 // <1>
+==>2
+----
+
+++++
+<!-- 🐓 -->
+++++
+
+<1> ...
 
 --
 
@@ -964,7 +1237,8 @@ is_divisible -> ||is_divisble?bool<=int(by?int=>is(neq(0)).else(print('error').m
 [source,mmadt]
 ----
 fhatos> is_divisible -> ||is_divisble?bool<=int(by?int=>is(neq(0)).else(print('error').map(1)))[mod(*by).eq(0)]
-==>is_divisble?bool<=int(by?int=>is?noobj<=obj(neq?noobj<=!...
+==>is_divisble?bool<=int(by?int=>is?noobj<=obj(neq?noobj<=obj(0)[noobj])[noobj].else?noobj<=obj(print?noobj<=obj('error')[noobj].map?noobj...
+	is_divisble[mod(from(by)).eq(0)]]
 fhatos> 10.is_divisible(2)
 error==>true
 fhatos> 10.is_divisible('abc')
@@ -993,6 +1267,11 @@ int(a=>2)[*a]
 [source,mmadt]
 ----
 fhatos> int(a=>2)[*a]
+==>2
+fhatos> 4 + int(a=>2)[*a]
+==>6
+fhatos> 4 + int(a=>2)[+*a]
+==>10
 ----
 
 ++++
@@ -1154,7 +1433,8 @@ fhatos> *a?sub
 >sub[
 ==>source=>/io/console
 ==>pattern=>a
-==>on_recv=>a?sub!...
+==>on_recv=>a?sub
+>]
 fhatos> *b
 ==>a?sub
 fhatos> a->12
@@ -1241,7 +1521,10 @@ fhatos> thread[[
           halt=>false,
           delay=>nat[0]]]@abc
 >thread[
-==>loop=>from(a,0).plus(1).to(a).!...
+==>loop=>from(a,0).plus(1).to(a).is(gt(10)).map(true).to(/abc/halt)
+==>halt=>false
+==>delay=>nat[0]
+>]@abc
 ----
 
 ++++
@@ -1275,12 +1558,28 @@ fhatos> int[6].inspect()
 >[
 ==>type=>[
 ===>id=>/mmadt/int
-===>obj=>[int][_...
+===>obj=>[int][_]
+===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
+===>rng=>[id=>/mmadt/int,coeff=>[1,1]]
+=>]
+==>value=>[
+===>obj=>6
+===>encoding=>int32_t
+=>]
+>]
 fhatos> real[6.0].inspect()
 >[
 ==>type=>[
 ===>id=>/mmadt/real
-===>obj=>[real][!...
+===>obj=>[real][_]
+===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
+===>rng=>[id=>/mmadt/real,coeff=>[1,1]]
+=>]
+==>value=>[
+===>obj=>6.00000
+===>encoding=>float_t
+=>]
+>]
 ----
 
 ++++
@@ -1310,7 +1609,12 @@ fhatos> /sys/router/config/resolve/auto_prefix ->
 ==>noobj
 ==>noobj
 ==>noobj
-...
+==>noobj
+==>noobj
+==>noobj
+==>noobj
+==>noobj
+>]
 fhatos> a -> int8[126]                       // <2>
 ==>int8[126]
 fhatos> @a + 1
@@ -1319,7 +1623,7 @@ fhatos> @a + 1
 ==>int8[128]@a
 fhatos> @a + 1                               // <3>
 [ERROR] [/sys/scheduler] [/sys/lang/parser] 129@a is not a /mmadt/ext/int8 as defined by uint8()[is(gte(-127)).is(lte(128))] 
-	  thrown at inst int8[128]@a => plus(0?int=>1)[cpp] [0=>1]
+	  thrown at inst int8[128]@a => plus(0?int=>1)[cpp] [0=>'@a + 1                               // <3>',0?int=>1]
 ----
 
 ++++
@@ -1347,7 +1651,18 @@ The wildcard feature of the fURI scheme makes it possible to access instructions
 ----
 fhatos> */mmadt/int/#
 ==>[int][[_]]
-==>as?obj<=int(isa?noobj<=obj(/mm...
+==>as?obj<=int(isa?noobj<=obj(/mmadt/uri)[noobj])[cpp]
+==>div?int<=int(0?int=>isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>gt?bool<=int(_)[cpp]
+==>gte?bool<=int(_)[cpp]
+==>inspect?rec<=int(_)[cpp]
+==>lt?bool<=int(_)[cpp]
+==>lte?bool<=int(_)[cpp]
+==>minus?int<=int(0?int=>isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>mod?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>mult?int<=int(0?int=>isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>neg?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>plus?int<=int(0?int=>isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
 ----
 
 ++++
@@ -1646,20 +1961,30 @@ It's not difficult to realize how an "if"-`rec` generalizes to support the vario
 if-else::
 +
 --
+
+.if-else icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#If%E2%80%93then(%E2%80%93else),2x,role=blue]
+
 ++++
 <!-- 🐖 ./main_runner.out
-[HEADER] .if-else icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#If%E2%80%93then(%E2%80%93else),2x,role=blue]
-{1,2,3}-|[                 /
-  is(gt(2)) => mult(-1),   /
+{1,2,3}-|[                            /
+  is(gt(2)) => mult(-1),      --- <1> /
+  _         => mult(100)]     --- <2>
+{1,2,3}-|[                            /
+  is(gt(2)) => mult(-1),              /
   _         => mult(100)]>-
 -->
 ++++
 
-.if-else icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#If%E2%80%93then(%E2%80%93else),2x,role=blue]
 [source,mmadt]
 ----
-fhatos> {1,2,3}-|[                
-          is(gt(2)) => mult(-1),  
+fhatos> {1,2,3}-|[                           
+          is(gt(2)) => mult(-1),      // <1>
+          _         => mult(100)]     // <2>
+==>1
+==>2
+==>3
+fhatos> {1,2,3}-|[                           
+          is(gt(2)) => mult(-1),             
           _         => mult(100)]>-
 ==>100
 ==>200
@@ -1669,29 +1994,56 @@ fhatos> {1,2,3}-|[
 ++++
 <!-- 🐓 -->
 ++++
+
+<1> The _if_ branch.
+<2> The _else_ branch.
+
 --
 switch::
 +
 --
 
+.switch icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Case_and_switch_statements,2x,role=blue]
+
 ++++
 <!-- 🐖 ./main_runner.out
-[HEADER] .switch icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Case_and_switch_statements,2x,role=blue]
-{1,2,3}-<[             /
-  is(eq(1)) => mult(-1),    /
-  is(eq(2)) => mult(0),     /
-  is(eq(3)) => _]>-
+{1,2,3}-<[                   /
+  is(gt(0)) => mult(-1),    /
+  is(gt(1)) => mult(0),     /
+  is(gt(2)) => _]
+{1,2,3}-<[                  /
+  is(gt(0)) => mult(-1),    /
+  is(gt(1)) => mult(0),     /
+  is(gt(2)) => _]>-
 -->
 ++++
 
-.switch icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Case_and_switch_statements,2x,role=blue]
 [source,mmadt]
 ----
-fhatos> {1,2,3}-<[            
-          is(eq(1)) => mult(-1),   
-          is(eq(2)) => mult(0),    
-          is(eq(3)) => _]>-
+fhatos> {1,2,3}-<[                  
+          is(gt(0)) => mult(-1),   
+          is(gt(1)) => mult(0),    
+          is(gt(2)) => _]
+>[
+==>is(gt(0))=>-1
+>]
+>[
+==>is(gt(0))=>-2
+==>is(gt(1))=>0
+>]
+>[
+==>is(gt(0))=>-3
+==>is(gt(1))=>0
+==>is(gt(2))=>3
+>]
+fhatos> {1,2,3}-<[                 
+          is(gt(0)) => mult(-1),   
+          is(gt(1)) => mult(0),    
+          is(gt(2)) => _]>-
 ==>-1
+==>-2
+==>0
+==>-3
 ==>0
 ==>3
 ----
@@ -1704,14 +2056,14 @@ guard::
 +
 --
 
+.guard icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Guarded_conditionals,2x,role=blue]
+
 ++++
 <!-- 🐖 ./main_runner.out
-[HEADER] .guard icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Guarded_conditionals,2x,role=blue]
 {1,2,3}.[
 -->
 ++++
 
-.guard icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Guarded_conditionals,2x,role=blue]
 [source,mmadt]
 ----
 fhatos> {1,2,3}.[
@@ -1729,14 +2081,14 @@ pattern::
 +
 --
 
+.pattern-match icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Pattern_matching,2x,role=blue]
+
 ++++
 <!-- 🐖 ./main_runner.out
-[HEADER] .pattern-match icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Pattern_matching,2x,role=blue]
 --- todo
 -->
 ++++
 
-.pattern-match icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Pattern_matching,2x,role=blue]
 [source,mmadt]
 ----
 fhatos> --- todo
@@ -1867,7 +2219,7 @@ a -> age[45]
 ----
 fhatos> age -> \|(is(gt(0)).is(lt(120)))
 [ERROR] [/sys/scheduler] [/mmadt/int] 0 accessed as uri
-	  thrown at inst age => gt(0) [0=>0]
+	  thrown at inst age => gt(0) [0=>'age -> \|(is(gt(0)).is(lt(120)))',code=>'age -> \|(is(gt(0)).is(lt(120)))']
 fhatos> a -> age[45]
 [ERROR] [/sys/scheduler] [/sys/lang/parser] age is an undefined type
 fhatos> *a.inspect()
@@ -1900,7 +2252,21 @@ fhatos> @a.inspect()
 >[
 ==>type=>[
 ===>id=>/mmadt/int
-===>obj=>[int][_...
+===>obj=>[int][_]
+===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
+===>rng=>[id=>/mmadt/int,coeff=>[1,1]]
+=>]
+==>value=>[
+===>id=>a
+===>obj=>12
+===>encoding=>int32_t
+=>]
+==>sub=>[
+===>source=>/io/console
+===>pattern=>a
+===>on_recv=>a?sub
+=>]
+>]
 fhatos> @a.plus(1)
 ==>13@a
 fhatos> @a.plus(1).plus(1)
@@ -1934,7 +2300,7 @@ For instance, if a natural number stem:[\mathbb{N}] is any non-negative number, 
 ----
 fhatos> /type/int/nat -> |is(gt(0))
 [ERROR] [/sys/scheduler] [/mmadt/int] 0 accessed as uri
-	  thrown at inst /type/int/nat => gt(0) [0=>0]
+	  thrown at inst /type/int/nat => gt(0) [0=>'/type/int/nat -> |is(gt(0))',code=>'/type/int/nat -> |is(gt(0))']
 fhatos> nat[6]
 ==>nat[6]
 fhatos> nat[-6]
@@ -1943,7 +2309,7 @@ fhatos> nat[3].plus(2)
 ==>nat[5]
 fhatos> nat[3].mult(-2)
 [ERROR] [/sys/scheduler] [/sys/lang/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
-	  thrown at inst nat[3] => mult(0?int=>-2)[cpp] [0=>-2]
+	  thrown at inst nat[3] => mult(0?int=>-2)[cpp] [0=>'nat[3].mult(-2)',0?int=>-2]
 ----
 
 ++++
@@ -2000,7 +2366,26 @@ fhatos> */sys/router/#/
 >[
 ==>/sys/router=>[
 ===>frame=>[rec][_]
-===>config...
+===>config=>[
+====>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
+==>]
+===>query=>[
+====>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
+==>]
+===>structure=>[
+====>/sys/#
+====>/mnt/#
+====>/boot/#
+====>/fos/#
+====>/mmadt/#
+====>/io/#
+====>+/#
+====>/disk/#
+====>/shared/#
+====>/bus/#
+==>]
+=>]@/sys/router
+>]
 ----
 
 ++++
@@ -2047,7 +2432,8 @@ fhatos> *a?sub                     // <4>
 >sub[
 ==>source=>/io/console
 ==>pattern=>a
-==>on_recv=>a?sub!...
+==>on_recv=>a?sub
+>]
 fhatos> a -> 'meangirl'            // <5>
 ==>'meangirl'
 fhatos> *b                         // <6>
@@ -2188,7 +2574,7 @@ fhatos> *a/#/           // <6>
 ==>a/b=>2
 ==>a/b/c=>3
 ==>a/b/d=>4
->!...
+>]
 ----
 
 ++++
